WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
302554
WebM + VP9/Vorbis (with fallback) is not working in Safari with feature flag enabled
https://bugs.webkit.org/show_bug.cgi?id=302554
Summary
WebM + VP9/Vorbis (with fallback) is not working in Safari with feature flag ...
Jean-Yves Avenard [:jya]
Reported
2025-11-14 15:25:09 PST
Steps to reproduce: 1. Launch Safari on iPadOS 2. Navigate to
https://webkit.apple.com/demos/bin/video/webm-codec-support/
3. Tap ‘Expand All’ 4. Locate the 'WebM + VP9/Vorbis (with fallback)' video player 5. Video should be green but it’s red
rdar://164053503
Attachments
Add attachment
proposed patch, testcase, etc.
Jean-Yves Avenard [:jya]
Comment 1
2025-11-14 15:41:09 PST
Pull request:
https://github.com/WebKit/WebKit/pull/53970
EWS
Comment 2
2025-11-16 18:04:22 PST
Committed
303100@main
(0693fed3f72a): <
https://commits.webkit.org/303100@main
> Reviewed commits have been landed. Closing PR #53970 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug