WebM + VP9/Vorbis (with fallback) is not working in Safari with feature flag enabled https://bugs.webkit.org/show_bug.cgi?id=302554 rdar://164053503

Reviewed by Eric Carlson.

canLoad_VideoToolbox_VTIsHardwareDecodeSupported isn't usable in the content process
where the MediaPlayerPrivateWebM now runs. Use vp9HardwareDecoderAvailable
instead.

Test: media/ios/media-sources-selection-vp9.html
* LayoutTests/media/content/vp9-opus-bad.png: Added.
* LayoutTests/media/content/vp9-opus-bad.webm: Added.
* LayoutTests/media/ios/media-sources-selection-vp9-expected.html: Added.
* LayoutTests/media/ios/media-sources-selection-vp9.html: Added.
This test will only pass with iOS simulator with no VP9 HW decoder.
* Source/WebCore/platform/graphics/cocoa/MediaPlayerPrivateWebM.mm:
(WebCore::MediaPlayerPrivateWebM::didParseInitializationData):

Canonical link: https://commits.webkit.org/303100@main